--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,209 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Jappy Framework : Let's make Java Happy</title>
-<!-- Le styles -->
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/jappy.css">
-</head>
-<body>
-	<header class="navbar navbar-bright navbar-fixed-top" role="banner">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" type="button" data-toggle="collapse"
-					data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a href="/" class="navbar-brand">JappyFramework</a>
-			</div>
-			<nav class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
-					<li><a href="#sec">Get Started</a></li>
-					<li><a href="#sec">Edit</a></li>
-					<li><a href="#sec">Visualize</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+<html lang="en" ng-app='appcanvas'>
+  <head>
+    <meta charset="utf-8">
+    <title>Jappy Framework : Let's make Java Happy</title>
+    <!-- Le styles -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/jappy.css">
+  </head>
+  <body>
+    <div id="wrap">
+      <!-- Fixed navbar -->
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">AppCanvas</a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
 
-	<div id="masthead">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-7">
-					<h1>Jappy Framework</h1>
-					<p class="lead">The easiest way to apply Bootstrap</p>
-				</div>
-				<div class="col-md-5">
-					<div class="well well-lg">
-						<div class="row">
-							<div class="col-sm-6">
-								<img src="//placehold.it/180x100" class="img-responsive">
-							</div>
-							<div class="col-sm-6">
-								<strong>Important</strong>
-								<p>Blah blah blah blah bla!</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /cont -->
-	</div>
+      <!-- Begin page content -->
+      <div class="container">
+        <div class="page-header">
+          <h1>Java + Happy = Jappy</h1>
+        </div>
+        <p class="lead">Simple direct API, deep Cloud integration and awesome Admin pages.</p>
+      </div>
+    </div>
 
-	<!-- Begin Body -->
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3" id="leftCol">
-
-				<ul class="nav nav-stacked" id="sidebar">
-					<li><a href="#sec0">Section 0</a></li>
-					<li><a href="#sec1">Section 1</a></li>
-					<li><a href="#sec2">Section 2</a></li>
-					<li><a href="#sec3">Section 3</a></li>
-					<li><a href="#sec4">Section 4</a></li>
-				</ul>
-
-			</div>
-			<div class="col-md-9">
-				<h2 id="sec0">Content</h2>
-				At Bootply we like to build simple Bootstrap templates that utilize
-				the code Bootstap CSS without a lot of customization. Sure you can
-				find a lot of Bootstrap themes and inspiration, but these templates
-				tend to be heavy on customization.
-
-
-
-				<hr class="col-md-12">
-				Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-				architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-				voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-				cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
-				porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-				consectetur, adipisci velit, sed quia non numquam eius modi tempora
-				incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
-				enim ad minima veniam, quis nostrum exercitationem ullam corporis
-				suscipit laboriosam, nisi ut. Rem aperiam, eaque ipsa quae ab illo
-				inventore veritatis et quasi architecto beatae vitae dicta sunt
-				explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-				aut odit aut fugit, sed quia cor magni dolores eos qui ratione
-				voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-				ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
-				numquam eius modi tempora incidunt ut labore et dolore magnam
-				aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-				exercitationem ullam corporis suscipit laboriosam, nisi ut!
-
-
-
-				<h2 id="sec1">Content</h2>
-				<p>Rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-					quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-					voluptatem quia voluptas sit aspernatur aut odit aut.</p>
-				<div class="row">
-					<div class="col-md-6">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3>Hello.</h3>
-							</div>
-							<div class="panel-body">Lorem ipsum dolor sit amet,
-								consectetur adipiscing elit. Duis pharetra varius quam sit amet
-								vulputate. Quisque mauris augue, molestie tincidunt condimentum
-								vitae, gravida a libero. Aenean sit amet felis dolor, in
-								sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis
-								elementum auctor accumsan. Aliquam in felis sit amet augue.</div>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3>Hello.</h3>
-							</div>
-							<div class="panel-body">Lorem ipsum dolor sit amet,
-								consectetur adipiscing elit. Duis pharetra varius quam sit amet
-								vulputate. Quisque mauris augue, molestie tincidunt condimentum
-								vitae, gravida a libero. Aenean sit amet felis dolor, in
-								sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis
-								elementum auctor accumsan. Aliquam in felis sit amet augue.</div>
-						</div>
-					</div>
-				</div>
-
-				<hr>
-
-				<h2 id="sec2">Section 2</h2>
-				<p>Rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-					quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-					voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-					quia cor magni dolores eos qui ratione voluptatem sequi nesciunt.
-					Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-					consectetur, adipisci velit, sed quia non numquam eius modi tempora
-					incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
-					enim ad minima veniam, quis nostrum exercitationem ullam corporis
-					suscipit laboriosam, nisi ut!</p>
-				<div class="row">
-					<div class="col-md-4">
-						<img src="//placehold.it/300x300" class="img-responsive">
-					</div>
-					<div class="col-md-4">
-						<img src="//placehold.it/300x300" class="img-responsive">
-					</div>
-					<div class="col-md-4">
-						<img src="//placehold.it/300x300" class="img-responsive">
-					</div>
-				</div>
-
-				<hr>
-
-				<h2 id="sec3">Section 3</h2>
-				Images are responsive sed @mdo but sum are more fun peratis unde
-				omnis iste natus error sit voluptatem accusantium doloremque
-				laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-				veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-				Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
-				fugit, sed quia cor magni dolores eos qui ratione voluptatem sequi
-				nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-				amet, consectetur, adipisci velit, sed quia non numquam eius modi
-				tempora incidunt ut labore et dolore magnam aliquam quaerat
-				voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-				ullam corporis suscipit laboriosam, nisi ut
-
-				<h2 id="sec4">Section 4</h2>
-				Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-				accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-				quae ab illo inventore veritatis et quasi architecto beatae vitae
-				dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-				aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui
-				ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-				dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-				quia non numquam eius modi tempora incidunt ut labore et dolore
-				magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-				nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-			</div>
-		</div>
-	</div>
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script type='text/javascript'>
-		$(function() {
-			
-			$('#sidebar').affix({
-				offset : {
-					top : 245
-				}
-			});
-
-			var $body = $(document.body);
-			var navHeight = $('.navbar').outerHeight(true) + 10;
-
-			$body.scrollspy({
-				target : '#leftCol',
-				offset : navHeight
-			});
-		});
-	</script>
-</body>
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted">Jappy Framework was built with love by @jarsj.</p>
+      </div>
+    </div>
+	
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/angular-ui-router.js"></script>
+  </body>
 </html>
 
